<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.webview.WebViewFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_webview" />

    <fragment
        android:id="@+id/nav_sensor"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.hardware.CompassFragment"
        android:label="Датчик"
        tools:layout="@layout/fragment_compass" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.hard.CameraFragment"
        android:label="Камера"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_microphone"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.hard.MicrophoneFragment"
        android:label="Микрофон"
        tools:layout="@layout/fragment_microphone" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.profile.ProfileFragment"
        android:title="Профиль"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_filework"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.filework.FileWorkFragment"
        android:title="Работа с файлами"
        tools:layout="@layout/fragment_file_work" />

    <fragment
        android:id="@+id/networkFragment"
        android:name="com.mirea.briskovaekaterinaborisovna.mireaproject.ui.firebase.NetworkFragment"
        android:label="Сеть"
        tools:layout="@layout/fragment_network" />
</navigation>